# Vigil

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
docs/: index.html
scripts/: e2e-github-chaos.mjs  generate_icns.sh  generate_ico.py  generate_icons.py
src/: App.tsx  tauri.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: activate.rs  commands.rs  db.rs  github.rs  lib.rs  tray.rs
src/components/: AvatarStack.tsx  FooterRow.tsx  GlowBlob.tsx  Inbox.tsx  ItemDetail.tsx  ItemRow.tsx  LiveIndicator.tsx  Onboarding.tsx  PillTabs.tsx  Popover.tsx  PopoverSummary.tsx  PostSetup.tsx  RepoManagement.tsx  RepoSelection.tsx  RepoSetupTips.tsx  RepoView.tsx  Settings.tsx  SkeuomorphicSlider.tsx  SummaryText.tsx  TagPills.tsx  TitleBar.tsx  design.tsx
src/engine/: noiseFilter.ts  scoring.ts  slopDetector.ts  types.ts
src/styles/: global.css
